@@ -36,6 +36,9 @@ Changes since 1.4.0:
 * Output device link state in 'ethercat master'.
 * Added 'ethercat graph' command which outputs the bus topology in
   DOT language.
+* Added ecrt_slave_sdo_upload() and ecrt_slave_sdo_download() methods to let
+  an application transfer SDOs before activating the master. Thanks to Stefan
+  Weiser.
 
 Changes in 1.4.0:
 
